--- a/README
+++ b/README
@@ -5,9 +5,11 @@ SYNOPSIS
      use Map::Tube::Kharkiv;
      my $obj = Map::Tube::Kharkiv->new;
      my $routes_ar = $obj->get_all_routes($from, $to);
+     my $lines_ar = $obj->get_lines;
      my $station = $obj->get_node_by_id($station_id);
      my $station = $obj->get_node_by_name($station_name);
      my $route = $obj->get_shortest_route($from, $to);
+     my $stations_ar = $obj->get_stations($line);
      my $metro_name = $obj->name;
      my $xml_file = $obj->xml;
 
@@ -26,6 +28,10 @@ METHODS
              Get all routes from station to station.
              Returns reference to array with Map::Tube::Route objects.
 
+    "get_lines()"
+             Get lines in metro map.
+             Returns reference to array with Map::Tube::Line objects.
+
     "get_node_by_id($station_id)"
              Get station node by id.
              Returns Map::Tube::Node object.
@@ -37,6 +43,10 @@ METHODS
     "get_shortest_route($from, $to)"
              Get shortest route between $from and $to node names. Node names in $from and $to are case insensitive.
              Returns Map::Tube::Route object.
+
+    "get_stations($line)"
+             Get list of stations for concrete metro line.
+             Returns reference to array with Map::Tube::Node objects.
 
     "name()"
              Get metro name.
@@ -88,13 +98,48 @@ EXAMPLE2
      # Output like:
      # XML file: .*/kharkiv-map.xml
 
+EXAMPLE3
+     # Pragmas.
+     use strict;
+     use warnings;
+
+     # Modules.
+     use Map::Tube::GraphViz;
+     use Map::Tube::GraphViz::Utils qw(node_color_without_label);
+     use Map::Tube::Kharkiv;
+
+     # Object.
+     my $obj = Map::Tube::Kharkiv->new;
+
+     # GraphViz object.
+     my $g = Map::Tube::GraphViz->new(
+             'callback_node' => \&node_color_without_label,
+             'driver' => 'neato',
+             'tube' => $obj,
+     ); 
+
+     # Get graph to file.
+     $g->graph('Kharkiv.png');
+
+     # Print file.
+     system "ls -l Kharkiv.png";
+
+     # Output like:
+     # -rw-r--r-- 1 skim skim 94579 Dec 23 14:15 Kharkiv.png
+
 DEPENDENCIES
     File::Share, Map::Tube, Moo, namespace::clean.
 
 SEE ALSO
-    Map::Tube, Map::Tube::Barcelona, Map::Tube::Berlin, Map::Tube::Delhi,
+    Map::Tube, Map::Tube::GraphViz, Map::Tube::Text::Table.
+
+    Map::Tube::Barcelona, Map::Tube::Berlin, Map::Tube::Bucharest,
+    Map::Tube::Delhi, Map::Tube::Dnipropetrovsk, Map::Tube::Kazan,
     Map::Tube::Kiev, Map::Tube::London, Map::Tube::Minsk, Map::Tube::Moscow,
-    Map::Tube::NYC, Map::Tube::Sofia, Map::Tube::Tokyo, Map::Tube::Warsaw.
+    Map::Tube::Novosibirsk, Map::Tube::NYC, Map::Tube::Prague,
+    Map::Tube::SaintPetersburg, Map::Tube::Samara, Map::Tube::Sofia,
+    Map::Tube::Tbilisi, Map::Tube::Tokyo, Map::Tube::Vienna,
+    Map::Tube::Warsaw, Map::Tube::Yekaterinburg.
 
 REPOSITORY
     <https://github.com/tupinek/Map-Tube-Kharkiv>
@@ -110,5 +155,5 @@ LICENSE AND COPYRIGHT
      BSD 2-Clause License
 
 VERSION
-    0.02
+    0.03
 
